# agent-comm-protocol

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  agent_protocol_concepts.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 01_mcp_deep_dive.md  02_a2a_deep_dive.md  03_acp_deep_dive.md  04_anp_deep_dive.md  05_memory_architecture.md  06_security_governance.md  07_observability.md  08_design_patterns.md  09_failure_resilience.md  10_protocol_comparison_matrix.md  11_end_to_end_walkthrough.md  12_mental_models.md  13_quick_reference.md  README.md
examples/: basic_delegation.py  swarm_example.py
src/: __init__.py  _logging.py  agent.py  memory.py  messaging.py  observability.py  protocol_router.py  security.py
src/failure/: __init__.py  handlers.py
src/patterns/: __init__.py  planner_executor.py  router_agent.py  swarm.py
src/protocols/: __init__.py  a2a.py  acp.py  anp.py  mcp.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_a2a.py  test_acp.py  test_agent.py  test_failure_handlers.py  test_mcp.py  test_memory.py  test_observability.py  test_protocol_router.py  test_security.py
