[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-comm-protocol"
version = "1.0.0"
description = "Production-grade multi-agent communication system: MCP, A2A, ACP, ANP protocols"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["agents", "mcp", "a2a", "acp", "anp", "llm", "multi-agent", "protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
structured-logging = ["structlog>=23.2.0"]
http = ["aiohttp>=3.9.0", "httpx>=0.26.0"]
api = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
cache = ["redis>=5.0.1"]
crypto = ["pyjwt>=2.8.0", "cryptography>=41.0.0"]
all = [
    "structlog>=23.2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.1",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "pydantic>=2.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-comm-protocol"
Documentation = "https://github.com/your-org/agent-comm-protocol/tree/main/docs"
Repository = "https://github.com/your-org/agent-comm-protocol"
Issues = "https://github.com/your-org/agent-comm-protocol/issues"
Changelog = "https://github.com/your-org/agent-comm-protocol/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (skipped by default with -m 'not slow')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 75

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501", "B008", "RUF012", "N818"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
